(#531) Fix vertical alignment of MultiSearch input field

--- a/src/components/tables/MultiSearch/MultiSearch.module.scss
+++ b/src/components/tables/MultiSearch/MultiSearch.module.scss
@@ -20,6 +20,11 @@
         border: none;
       }
     }
+    
+    .bk-search-input__search-key,
+    .bk-search-input__search-icon {
+      padding-block-start: 0.2rem; // To adjust vertical alignment with the input field
+    }
 
     .bk-search-input__search-icon,
     .bk-search-input__search-key {
